--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -10,6 +10,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     
+    - name: Install clang-format
+      run: brew install clang-format
+
     - name: configure
       run: cmake -Htest -Bbuild
 
