--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 
 # ---- Project ----
 
-project(BitView 
+project(BitLens 
   VERSION 1.0
   LANGUAGES CXX
 )
@@ -16,15 +16,15 @@ endif()
 # ---- Make headers visible in IDEs ----
 
 FILE(GLOB headers "${CMAKE_CURRENT_SOURCE_DIR}/include/*.h")
-add_library(BitViewHeaders EXCLUDE_FROM_ALL ${headers})
-SET_TARGET_PROPERTIES(BitViewHeaders PROPERTIES LINKER_LANGUAGE CXX)
+add_library(BitLensHeaders EXCLUDE_FROM_ALL ${headers})
+SET_TARGET_PROPERTIES(BitLensHeaders PROPERTIES LINKER_LANGUAGE CXX)
 
 # ---- Create library ----
 
-add_library(BitView INTERFACE)
-set_target_properties(BitView PROPERTIES INTERFACE_COMPILE_FEATURES cxx_std_17)
+add_library(BitLens INTERFACE)
+set_target_properties(BitLens PROPERTIES INTERFACE_COMPILE_FEATURES cxx_std_17)
 
-target_include_directories(BitView
+target_include_directories(BitLens
   INTERFACE 
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
     $<INSTALL_INTERFACE:include>
@@ -33,7 +33,7 @@ target_include_directories(BitView
 include(CMakePackageConfigHelpers)
 
 write_basic_package_version_file(
-  "${PROJECT_BINARY_DIR}/BitViewConfigVersion.cmake"
+  "${PROJECT_BINARY_DIR}/BitLensConfigVersion.cmake"
   VERSION ${PROJECT_VERSION}
   COMPATIBILITY AnyNewerVersion
 )
@@ -41,8 +41,8 @@ write_basic_package_version_file(
 # ---- Install ----
 
 install(
-  TARGETS BitView
-  EXPORT BitViewTargets
+  TARGETS BitLens
+  EXPORT BitLensTargets
   LIBRARY DESTINATION lib COMPONENT Runtime
   ARCHIVE DESTINATION lib COMPONENT Development
   RUNTIME DESTINATION bin COMPONENT Runtime
@@ -53,22 +53,22 @@ install(
 include(CMakePackageConfigHelpers)
 
 configure_package_config_file(
-  "${PROJECT_SOURCE_DIR}/cmake/BitViewConfig.cmake.in"
-  "${PROJECT_BINARY_DIR}/BitViewConfig.cmake"
-  INSTALL_DESTINATION lib/cmake/BitView
+  "${PROJECT_SOURCE_DIR}/cmake/BitLensConfig.cmake.in"
+  "${PROJECT_BINARY_DIR}/BitLensConfig.cmake"
+  INSTALL_DESTINATION lib/cmake/BitLens
 )
 
 install(
-  EXPORT BitViewTargets 
-  DESTINATION lib/cmake/BitView
+  EXPORT BitLensTargets 
+  DESTINATION lib/cmake/BitLens
 )
 
 install(
   FILES 
-    "${PROJECT_BINARY_DIR}/BitViewConfigVersion.cmake"
-    "${PROJECT_BINARY_DIR}/BitViewConfig.cmake"
+    "${PROJECT_BINARY_DIR}/BitLensConfigVersion.cmake"
+    "${PROJECT_BINARY_DIR}/BitLensConfig.cmake"
   DESTINATION 
-    lib/cmake/BitView
+    lib/cmake/BitLens
 )
 
 install(
