--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,7 +37,7 @@ set_target_properties(BitLens PROPERTIES INTERFACE_COMPILE_FEATURES cxx_std_17)
 target_include_directories(BitLens
   INTERFACE 
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+    $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
 )
 
 include(CMakePackageConfigHelpers)
