add PackageProject.cmake (#21)
* add PackageProject

* add install workflow

* add Badge

* ok NOW add install workflow

* fix install interface

* remove non-existant dependencies

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 # ---- Project ----
 
 project(BitLens 
-  VERSION 1.0
+  VERSION 2.2
   LANGUAGES CXX
 )
 
@@ -12,6 +12,16 @@ project(BitLens
 if(${PROJECT_SOURCE_DIR} STREQUAL ${PROJECT_BINARY_DIR})
     message(FATAL_ERROR "In-source builds not allowed. Please make a new directory (called a build directory) and run CMake from there.")
 endif()
+
+# ---- Dependencies ----
+
+include(cmake/CPM.cmake)
+
+CPMAddPackage(
+  NAME PackageProject.cmake
+  GITHUB_REPOSITORY TheLartians/PackageProject.cmake
+  VERSION 1.1
+)
 
 # ---- Make headers visible in IDEs ----
 
@@ -27,7 +37,7 @@ set_target_properties(BitLens PROPERTIES INTERFACE_COMPILE_FEATURES cxx_std_17)
 target_include_directories(BitLens
   INTERFACE 
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
-    $<INSTALL_INTERFACE:include>
+    $<INSTALL_INTERFACE:include/${PROJECT_NAME}-${PROJECT_VERSION}>
 )
 
 include(CMakePackageConfigHelpers)
@@ -40,38 +50,11 @@ write_basic_package_version_file(
 
 # ---- Install ----
 
-install(
-  TARGETS BitLens
-  EXPORT BitLensTargets
-  LIBRARY DESTINATION lib COMPONENT Runtime
-  ARCHIVE DESTINATION lib COMPONENT Development
-  RUNTIME DESTINATION bin COMPONENT Runtime
-  PUBLIC_HEADER DESTINATION include COMPONENT Development
-  BUNDLE DESTINATION bin COMPONENT Runtime
-)
-
-include(CMakePackageConfigHelpers)
-
-configure_package_config_file(
-  "${PROJECT_SOURCE_DIR}/cmake/BitLensConfig.cmake.in"
-  "${PROJECT_BINARY_DIR}/BitLensConfig.cmake"
-  INSTALL_DESTINATION lib/cmake/BitLens
-)
-
-install(
-  EXPORT BitLensTargets 
-  DESTINATION lib/cmake/BitLens
-)
-
-install(
-  FILES 
-    "${PROJECT_BINARY_DIR}/BitLensConfigVersion.cmake"
-    "${PROJECT_BINARY_DIR}/BitLensConfig.cmake"
-  DESTINATION 
-    lib/cmake/BitLens
-)
-
-install(
-  DIRECTORY ${PROJECT_SOURCE_DIR}/include/
-  DESTINATION include
+packageProject(
+  NAME ${PROJECT_NAME}
+  VERSION ${PROJECT_VERSION}
+  BINARY_DIR ${PROJECT_BINARY_DIR}
+  INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include
+  INCLUDE_DESTINATION include/${PROJECT_NAME}-${PROJECT_VERSION}
+  DEPENDENCIES ""
 )
